# image-deduplication

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  convert.py  dev.Dockerfile  disjointset.py  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg  test.ipynb  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
image_dedup/: convert.py  phash.py
src/: __init__.py  constants.py  paths.py  phash.py  utils.py
tests/: test_dummy.py
