[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry]
name = "PYTHON TEMPLATE"
version = "0"
description = ""
authors = ["Tianle Chen <tianlechen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9.7,<3.11" # should match Dockerfile
streamlit = "^1.27.1"
sqlitedict = "^2.1.0"
pyheif = "^0.7.1"
scipy = "^1.13.0"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
opencv-python = "^4.9.0.80"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pre-commit = "^3.2.2"
black = "24.4.2" # should match .pre-commit-config.yaml
isort = "5.12.0" # should match .pre-commit-config.yaml
